[package]
name = "biliup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
serde = { version = "1.0.137",features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
rusqlite = {version = "0.27.0",features = ["bundled"]}
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.9"
regex = "1.5.6"
async-trait = "0.1.56"
downloader = "0.2.6"
rustube = "0.4.0"
indicatif = "0.16.2"
async-recursion = "1.0.0"
biliup = "0.1.9"

# 添加arm交叉编译时不使用openssl 更换为rustls-tls
[target.'cfg(any(all(target_arch="aarch64", target_vendor="unknown", target_os="linux"), target_env="musl"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json","cookies", "rustls-tls"] }

[target.'cfg(not(any(all(target_arch="aarch64", target_vendor="unknown", target_os="linux"), target_env="musl")))'.dependencies]
reqwest = { version = "0.11", features = ["cookies","json"] }